<resources>
    <string name="app_name">ViggieMart</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Hello!Pheaktra</string>
    <string name="find">Find Product</string>
    <string name="cambodia">Cambodia</string>
    <string name="find_product">Find Product</string>
    <string name="allproduct">All Products</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="productitem">Product1</string>
<<<<<<< HEAD
    <string name="back_button" />
=======
    <string name="default_web_client_id">577167748924-6o2pcsinui2oaltr4m4hav7ipsat56u0.apps.googleusercontent.com</string>
>>>>>>> f2ee3a3436ab1db5a4d83e7fc9087b45b7417fba
</resources>