<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background_bar_home"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_bg_icon"
                android:contentDescription="@string/todo1"
                android:padding="8dp"
                android:id="@+id/btndrawer"
                android:src="@drawable/person_24px" />

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Hello!"
                       android:textColor="@color/text_color"
                       android:textSize="20sp"
                       android:textStyle="bold" />
                   <TextView
                       android:id="@+id/getNameTop"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textColor="@color/text_color"
                       android:textSize="20sp"
                       android:text="PheakTra"
                       android:textStyle="bold" />
               </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/location_on_24px" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/cambodia"
                        android:textColor="@color/text_color" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="right"
                tools:ignore="RtlHardcoded">

                <ImageButton
                    android:id="@+id/card"
                    android:layout_width="50dp"
                    android:background="@drawable/rounded_bg_icon"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo2"
                    android:padding="8dp"
                    android:src="@drawable/shopping_bag_24px" />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo3"
                    android:padding="8dp"
                    android:background="@drawable/rounded_bg_icon"
                    android:src="@drawable/notifications_24px" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">

            <EditText
                android:id="@+id/searchView"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:autofillHints="Find Products"
                android:background="@drawable/rounded_bg_icon"
                android:hint="@string/find_product"
                android:paddingStart="20dp"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/background_icon"
                tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo4"
                android:src="@drawable/filter_list_24px"
                android:background="@drawable/rounded_bg_icon"
                android:layout_marginStart="5dp"
                android:padding="8dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            tools:ignore="SpeakableTextPresentCheck,UselessParent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo5"
                    android:src="@drawable/image_banner"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo6"
                    android:src="@drawable/image_banner"
                    android:layout_marginTop="20dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo7"
                    android:src="@drawable/image_banner"
                    android:layout_margin="20dp" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allproduct"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:listitem="@layout/card_item" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>